<resources>
    <string name="app_name">A Note &amp; To Do</string>
    <string name="note">Note</string>
    <string name="task">To Do</string>
    <string name="user_interface_cap">INTERFACE</string>
    <string name="done">Done</string>
    <string name="saved_note">Note saved</string>
    <string name="saved_task">To Do saved</string>
    <string name="error_text">Error</string>
    <string name="error_loading">Error loading</string>
    <string name="error_saving">Error saving</string>
    <string name="error_widget">Error loading for widget</string>
    <string name="error_back_up">Error backing up</string>
    <string name="error_restore">Error restoring</string>
    <string name="error_reminder">Error setting reminder</string>
    <string name="text_here">Jot down your note here</string>
    <string name="title_here">Title</string>
    <string name="yesterday">Yesterday</string>
    <string name="untitled_note">Untitled Note</string>
    <string name="untitled_task">Untitled To Do</string>
    <string name="confirm_discard">Do you want to discard the change to this note?</string>
    <string name="discard_title">Discard Change</string>
    <string name="discard">Discard</string>
    <string name="save_instead">Save instead</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete Item</string>
    <string name="confirm_delete_list">Do you want to delete selected item(s)?</string>
    <string name="confirm_delete_edit">Do you want to delete this item?</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="back">Back</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="select_note_instruction">Select Note</string>
    <string name="just_now">Just now</string>
    <string name="note_preview">Note Preview</string>
    <string name="todo_list_widget_label">To Do List</string>
    <string name="note_list_widget_label">Note List</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="show_starred">Show flagged notes</string>
    <string name="show_all_note">Show all notes</string>
    <string name="show_all_task">Show pending To Do</string>
    <string name="starred">Flag</string>
    <string name="unstarred">Unflag</string>
    <string name="settings">Settings</string>
    <string name="add_shortcut_short_label">Background Color</string>
    <string name="color_default_title">Select Background Color</string>
    <string name="search_hint">Search note</string>
    <string name="not_found">Nothing found</string>
    <string name="new_note">New note</string>
    <string name="new_to_do">New To Do</string>
    <string name="menu">Menu</string>
    <string name="saved_starred_toast">Note saved &amp; flagged</string>
    <string name="starred_toast">Note flagged</string>
    <string name="unstarred_toast">Note unflagged</string>
    <string name="pending_toast">Marked as to do</string>
    <string name="done_toast">Marked as done</string>
    <string name="note_deleted_toast">Note deleted</string>
    <string name="task_deleted_toast">To Do deleted</string>
    <string name="back_up">Backup</string>
    <string name="back_up_summary">Backup to storage</string>
    <string name="back_up_name" translatable="false">notebackup-</string>
    <string name="permission_required">Permission required</string>
    <string name="storage_permission_msg">Turn on storage permission to enable backup &amp; restore function.</string>
    <string name="open_settings">Open settings</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore from backup file</string>
    <string name="restore_success">Restore finished</string>
    <string name="backup_success">Backup finished</string>
    <string name="ok">OK</string>
    <string name="restore_confirm">Restoring will delete all existing notes. Continue?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="font_size_main_screen">Home Page Font Size</string>
    <string name="font_size_editing_screen">Edit Page Font Size</string>
    <string name="font_size_default" translatable="false">m</string>
    <string name="font_size_main_screen_summary">Config font size in home page</string>
    <string name="font_size_editing_screen_summary">Config font size in edit page</string>
    <string name="notification_pin">Pin to Notification</string>
    <string name="notification_unpin">Unpin Notification</string>
    <string name="notification_pin_summary">Pin a function bar on notification panel</string>
    <string name="function_bar">Function Bar</string>
    <string name="auto_back_up">Auto Backup</string>
    <string name="auto_back_up_summary">Automatically backup to external storage</string>
    <string-array name="back_up_frequency">
        <item>Daily</item>
        <item>Every 3 Days</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="auto_back_up_frequency_summary">Set the frequency of automatic backup</string>
    <string name="report">Report</string>
    <string name="report_summary">Report an issue to developer</string>
    <string name="backup_restore_cap">BACKUP &amp; RESTORE</string>
    <string name="other_cap">OTHERS</string>
    <string name="task_cap">TO DO</string>
    <string name="default_screen">Swap Home</string>
    <string name="default_screen_summary">Select default screen to show when launching app</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="all_day">All day</string>
    <string name="font_size_widget">Widget Font Size</string>
    <string name="font_size_widget_summary">Config font size in widget</string>
    <string name="premium_function">Premium Function</string>
    <string name="ads_prompt">Watch an Ad to unlock the function once.</string>
    <string name="ads_wait">Please wait while the ad is loading</string>
    <string name="ads_complete">Great! Feel free to use it now</string>
    <string name="todo_title_caption">What is the task?</string>
    <string name="task_hint">To Do name</string>
    <string name="due_date_caption">DUE DATE</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_pending">Mark as pending</string>
    <string name="remark_caption">REMARK</string>
    <string name="remark_hint">Progress, instruction etc.</string>
    <string name="date_hint">Date not set</string>
    <string name="time_hint">Time not set</string>
    <string name="category_caption">CATEGORY</string>
    <string name="asap">ASAP</string>
    <string name="important">IMPORTANT</string>
    <string name="priority_default">DEFAULT</string>
    <string name="priority_done">DONE</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_urgency">Sort by urgency</string>
    <string name="show_done">Show done tasks</string>
    <string name="switch_note">Switch to Note</string>
    <string name="switch_task">Switch to To Do</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder_set">No reminder</string>
    <string name="zero_min_before">When due</string>
    <string name="ten_min_before">10 min before</string>
    <string name="thirty_min_before">30 min before</string>
    <string name="a_day_beofre">24 hrs before</string>
    <string name="custom">Custom…</string>
    <string name="repeat">Repeat</string>
    <string name="notification_channel_name">Reminder</string>
    <string name="snooze">Snooze</string>
    <string-array name="snooze_duration">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string name="snooze_duration_summary">Change the duration of snoozing</string>
    <string name="change_default_sorting">Change Sorting Order</string>
    <string name="default_sort_by_time">Sorting by time by default</string>
    <string name="default_sort_by_urgency">Sorting by urgency by default</string>
    <string name="task_as_home_page">Using To Do as default page</string>
    <string name="note_as_home_page">Using Note as default page</string>
    <string name="remove_date_hint">Long press to remove date</string>
    <string name="remove_time_hint">Long press to remove time</string>
    <string name="add_note">Add Note</string>
    <string name="add_task">Add To Do</string>
    <string name="due_today">Due Today</string>
    <string name="due_today_with_time">Due Today at %s</string>
    <string name="due_tomorrow">Due Tomorrow</string>
    <string name="due_someday">Due %s</string>
    <string name="daily_update">Send Daily Update</string>
    <string name="send_daily_update">Post a daily notification if there is any To Dos due</string>
    <string name="notification_cap">NOTIFICATION</string>
    <string name="snooze_for">Snooze for…</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifthteen_minute">15 minutes</string>
    <string name="thirty_minute">30 minutes</string>
    <string name="three_hour">3 hours</string>
    <string name="one_hour">1 hour</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hour">24 hours</string>
    <string name="loading">Loading…</string>
    <string name="urgency">urgency</string>
    <string name="repeat_interval">Repeat Interval</string>
    <string name="not_repeating">Not repeating</string>
    <string name="day">Days</string>
    <string name="other_spinner">Other…</string>
    <string name="location">Location</string>
    <string name="location_hint">Location not set</string>
    <string name="location_permission_msg">Turn on location permission to enable function.</string>
    <string name="google_play_service_fail_toast">Google Play Service not available</string>
    <string name="location_cap">LOCATION</string>
    <string name="lat_lng" translatable="false">%1$s° N %2$s° W</string>
    <string name="task_widget_include_done">Done tasks included</string>
    <string name="task_widget_exclude_done">Done tasks excluded</string>
    <string name="task_widget_done">Done Task in Widget</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_location">My Location</string>
    <string name="latest_version_needed_for_restore">You must install the latest version to restore from the file.</string>
    <plurals name="notification_title">
        <item quantity="one">You have %d To Do due today.</item>
        <item quantity="zero">You have %d To Dos due today.</item>
        <item quantity="other">You have %d To Dos due today.</item>
    </plurals>
    <string-array name="font_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
    <string-array name="font_size_main_screen_value" translatable="false">
        <item>s</item>
        <item>m</item>
        <item>l</item>
        <item>xl</item>
    </string-array>
    <string-array name="font_size_editing_screen_value" translatable="false">
        <item>s</item>
        <item>m</item>
        <item>l</item>
        <item>xl</item>
    </string-array>
    <string-array name="font_size_widget_value" translatable="false">
        <item>s</item>
        <item>m</item>
        <item>l</item>
        <item>xl</item>
    </string-array>
</resources>