<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/sharp_search_24"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>


    <item android:id="@+id/show_starred"
        android:title="@string/starred"
        android:icon="@drawable/sharp_star_border_24"
        app:showAsAction="never" />


    <item android:id="@+id/back_up"
        android:title="@string/back_up"
        app:showAsAction="never" />

    <item android:id="@+id/restore"
        android:title="@string/restore"
        app:showAsAction="never" />


    <item android:id="@+id/setting"
        android:title="@string/setting"
        app:showAsAction="never" />


</menu>