<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".taskeditscreen.TaskEditFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/item_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="serif"
                    android:hint="@string/title_here"
                    android:maxLines="1"
                    android:textSize="33sp"
                    android:inputType="textCapSentences" />

                <ImageButton
                    android:id="@+id/task_show_drop_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sharp_more_vert_24"
                    android:contentDescription="@string/menu"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical"
                    android:focusable="false" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
                    android:text="@string/mark_as_done" />

                <Switch
                    android:id="@+id/task_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date_caption"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimary"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    app:srcCompat="@drawable/sharp_calendar_24"
                    android:contentDescription="@string/date"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/item_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date_hint"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_time_grid"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    app:srcCompat="@drawable/sharp_time_24"
                    android:contentDescription="@string/time"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/task_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="160dp"
                    android:hint="@string/time_hint"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/task_repeat_column"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/repeat"
                    app:srcCompat="@drawable/sharp_repeat_24"/>

                <Spinner
                    android:id="@+id/task_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/reminder"
                    app:srcCompat="@drawable/sharp_add_alert_24"/>

                <Spinner
                    android:id="@+id/task_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_cap"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/location"
                    app:srcCompat="@drawable/sharp_location_24"/>

                <TextView
                    android:id="@+id/item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/location_hint"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_caption"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <Spinner
                android:id="@+id/task_urgency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark_caption"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/task_remark"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/remark_hint"
                android:inputType="textCapSentences|textMultiLine" />

        </LinearLayout>


    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"/>



</RelativeLayout>