<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/app_bar"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/add_task" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:text="@string/note"/>

        <ImageView
            android:id="@+id/add_button"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_note" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/background"
        android:layout_weight="1">

        <ListView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1px"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>

    </RelativeLayout>
</LinearLayout>